# feo

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
examples/rust/cycle-benchmark/: BUILD.bazel  Cargo.toml
examples/rust/cycle-benchmark/src/: composites.rs  config.rs
examples/rust/mini-adas/: BUILD.bazel  Cargo.toml  TESTING.md
examples/rust/mini-adas/src/: config.rs
examples/rust/mini-adas/src/activities/: components.rs  messages.rs
feo/: Cargo.toml
feo-log/: BUILD.bazel
feo-time/: BUILD.bazel
feo/src/: activity.rs  cpp.rs  scheduler.rs
feo/src/agent/direct/: primary.rs  primary_mpsc.rs  secondary.rs
feo/src/agent/relayed/: primary.rs
feo/src/recording/: recorder.rs
feo/src/signalling/common/: interface.rs  signals.rs
feo/src/signalling/common/mpsc/: primitives.rs
feo/src/signalling/common/socket/: server.rs
feo/src/signalling/direct/: scheduler.rs  worker.rs
feo/src/signalling/direct/mpsc/: scheduler.rs
feo/src/signalling/relayed/: mod.rs
feo/src/signalling/relayed/connectors/: relays.rs  scheduler.rs
feo/src/signalling/relayed/sockets/: endpoint.rs
feo/src/worker/: mod.rs
main/: genindex.html  index.html  schema_violations.json  search.html
pr-10/: index.html
pr-11/: index.html
pr-12/: index.html
pr-13/: index.html
pr-14/: index.html
pr-15/: index.html
pr-18/: index.html
pr-19/: index.html
pr-21/: index.html
pr-22/: index.html
pr-24/: index.html
pr-25/: index.html
pr-26/: index.html
pr-28/: genindex.html  index.html
pr-29/: index.html
pr-3/: index.html  schema_violations.json
pr-30/: index.html
pr-34/: index.html  schema_violations.json  search.html
pr-35/: index.html
pr-36/: index.html
pr-37/: index.html
pr-38/: index.html
pr-39/: index.html
pr-4/: index.html
pr-40/: index.html  schema_violations.json
pr-41/: index.html  schema_violations.json
pr-42/: index.html  schema_violations.json
pr-43/: index.html  schema_violations.json
pr-44/: index.html  schema_violations.json
pr-45/: index.html  schema_violations.json
pr-46/: index.html  schema_violations.json
pr-47/: index.html  schema_violations.json
pr-48/: index.html  schema_violations.json
pr-49/: index.html  schema_violations.json
pr-5/: index.html
pr-50/: index.html  schema_violations.json
pr-52/: index.html  schema_violations.json
pr-53/: index.html  schema_violations.json
pr-54/: index.html  schema_violations.json
pr-55/: index.html  schema_violations.json
pr-56/: index.html  schema_violations.json
pr-57/: index.html  schema_violations.json
pr-58/: index.html  schema_violations.json
pr-59/: index.html  schema_violations.json
pr-6/: index.html
pr-75/: index.html  schema_violations.json
pr-76/: index.html  schema_violations.json
pr-89/: index.html  schema_violations.json
pr-9/: index.html
pr-92/: index.html  schema_violations.json
pr-93/: index.html  schema_violations.json
src/feo/: BUILD.bazel  Cargo.toml
src/feo-com/: BUILD.bazel  Cargo.toml
src/feo-com/src/: interface.rs
src/feo-com/src/iox2/: mod.rs
src/feo-com/src/linux_shm/: mod.rs
src/feo-time/: BUILD.bazel  Cargo.toml
src/feo-time/examples/: time_speedrun.rs
src/feo-time/src/: lib.rs
src/feo-tracer/: BUILD.bazel  Cargo.toml
src/feo-tracer/src/: io.rs  main.rs  perfetto.rs  progress.rs
src/feo-tracing/: BUILD.bazel  Cargo.toml
src/feo-tracing/src/: lib.rs  subscriber.rs
src/feo/src/: debug_fmt.rs  error.rs  ids.rs  lib.rs  scheduler.rs  timestamp.rs  topicspec.rs
src/feo/src/agent/direct/: primary.rs  primary_mpsc.rs  recorder.rs  secondary.rs
src/feo/src/agent/relayed/: primary.rs  recorder.rs  secondary.rs
src/feo/src/recording/: recorder.rs  registry.rs  transcoder.rs
src/feo/src/signalling/common/: interface.rs  signals.rs
src/feo/src/signalling/common/mpsc/: endpoint.rs  primitives.rs  worker.rs
src/feo/src/signalling/common/socket/: client.rs  connection.rs  mod.rs  server.rs
src/feo/src/signalling/direct/: recorder.rs  scheduler.rs  worker.rs
src/feo/src/signalling/direct/mpsc/: scheduler.rs
src/feo/src/signalling/relayed/: interface.rs  sockets_mpsc.rs
src/feo/src/signalling/relayed/connectors/: recorder.rs  relays.rs  scheduler.rs  secondary.rs
src/feo/src/signalling/relayed/mpsc/: endpoint.rs
src/feo/src/signalling/relayed/sockets/: endpoint.rs
src/feo/src/worker/: mod.rs
src/perfetto-model/: build.rs
src/perfetto-model/src/: lib.rs
tests/rust/feo_tests/: BUILD  Cargo.toml
tests/rust/feo_tests/src/: lib.rs
tests/rust/feo_tests/test_agent/: BUILD  Cargo.toml
tests/rust/feo_tests/test_agent/src/: activities.rs  config.rs  main.rs  primary.rs  scenario.rs  secondary.rs
