[workspace]
members = [
    "examples/rust/cycle-benchmark",
    "examples/rust/mini-adas",
    "src/feo",
    "src/feo-com",
    "src/feo-cpp-build",
    "src/feo-cpp-macros",
    "src/feo-time",
    "src/feo-tracing",
    "src/perfetto-model",
    "src/feo-tracer",
    "tests/rust/feo_tests",
    "tests/rust/feo_tests/test_agent",
]
resolver = "2"

[workspace.dependencies]
feo = { path = "src/feo" }
feo-com = { path = "src/feo-com" }
feo-cpp-build = { path = "src/feo-cpp-build" }
feo-cpp-macros = { path = "src/feo-cpp-macros" }
feo-time = { path = "src/feo-time" }
feo-tracing = { path = "src/feo-tracing" }
perfetto-model = { path = "src/perfetto-model" }
anyhow = "1.0.100"
argh = "0.1.13"
cc = "1.2.10"
bindgen = "0.69.5"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.22"
human_bytes = "0.4.3"
indicatif = "0.17.11"
iceoryx2 = { version = "0.5.0", default-features = false }
libc = "0.2.177"
mio = { version = "1.1.0", features = ["os-poll", "net"] }
nix = { version = "0.30.1", features = ["mman", "fs"] }
postcard = "1.1.3"
prost = "0.14.1"
prost-build = "0.14.1"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.37", features = ["std", "formatting", "macros"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "signal"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
tracing = { version = "0.1.41", features = ["attributes"], default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
ipc-channel = "0.20.2"
score_log = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "1b9f2786cd746ae9745dd2e81bf9073b4185a5e2" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "1b9f2786cd746ae9745dd2e81bf9073b4185a5e2" }

[profile.profiling]
inherits = "release"
debug = true
