[workspace]
members = [
    "examples/rust/cycle-benchmark",
    "examples/rust/mini-adas",
    "src/feo",
    "src/feo-com",
    "src/feo-cpp-build",
    "src/feo-cpp-macros",
    "src/feo-time",
    "src/feo-tracing",
    "src/perfetto-model",
    "src/feo-tracer",
    "tests/rust/feo_tests",
    "tests/rust/feo_tests/test_agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
feo = { path = "src/feo" }
feo-com = { path = "src/feo-com" }
feo-cpp-build = { path = "src/feo-cpp-build" }
feo-cpp-macros = { path = "src/feo-cpp-macros" }
feo-time = { path = "src/feo-time" }
feo-tracing = { path = "src/feo-tracing" }
perfetto-model = { path = "src/perfetto-model" }

anyhow = "1.0.99"
argh = "0.1.13"
async-stream = "0.3.6"
bytes = "1.11.1"
cc = "1.2.34"
console = "0.16.0"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
ctrlc = { version = "3.4.4", features = ["termination"] }
futures = "0.3.31"
human_bytes = "0.4.3"
iceoryx2 = "0.5.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
libc = "1.0.0-alpha.1"
log = { version = "0.4.27" }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
nix = { version = "0.30.1", features = ["fs", "mman", "signal", "process"] }
postcard = "1.1.3"
prost = "0.14.1"
prost-build = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socket2 = "0.6.0"
time = { version = "0.3.47", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "time",
    "signal",
] }
tokio-seqpacket = "0.8.0"
tokio-util = { version = "0.7.16", features = ["codec", "net"] }
tracing = { version = "0.1.41", features = [
    "attributes",
], default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
ipc-channel = "0.20.2"
score_log = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "1b9f2786cd746ae9745dd2e81bf9073b4185a5e2" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", rev = "1b9f2786cd746ae9745dd2e81bf9073b4185a5e2" }

[profile.profiling]
inherits = "release"
debug = true
